--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ target/
 *.tar
 *.tar.gz
 .flattened-pom.xml
-
+mvnw*
+mvnw.*
 # eclipse ignore
 .settings/
 .project
@@ -18,7 +19,7 @@ target/
 *.ipr
 *.iml
 *.iws
-
+*/.mvn
 # visual-studio-code ignore
 .vscode/
 
